test/tests/errors/error-array-access-out-of-bounds.sm
// true
// true
// false
/**/
/**/

program {
    array x[0:4]: int;
    x[-1] = 1;
}